--- a/engineering-programs.html
+++ b/engineering-programs.html
@@ -73,10 +73,10 @@
                         <span id="currentLang">EN</span>
                     </a>
                     <div class="dropdown-menu dropdown-menu-end fade-down">
-                        <a href="#" class="dropdown-item" onclick="switchLanguage(''en''); return false;">
+                        <a href="#" class="dropdown-item" onclick="switchLanguage('en'); return false;">
                             English
                         </a>
-                        <a href="#" class="dropdown-item" onclick="switchLanguage(''ar''); return false;">
+                        <a href="#" class="dropdown-item" onclick="switchLanguage('ar'); return false;">
                             Arabic
                         </a>
                     </div>
@@ -146,8 +146,8 @@
                 <li data-translate="eng_prog_1_axis_6">Road Engineering</li>
                 <li data-translate="eng_prog_1_axis_7">Presentation + Evaluation</li>
               </ul>
-              <a href="eng-civil-archi-phase-one.html" class="btn btn-primary mt-3">
-                <i class="fa fa-info-circle me-2"></i><span data-translate="view_full_program">View Full Program Details</span>
+              <a href="contact.html" class="btn btn-primary mt-3">
+                <i class="fa fa-user-plus me-2"></i><span data-translate="enroll_button">Enroll in This Program</span>
               </a>
             </div>
 
@@ -167,8 +167,8 @@
                 <li data-translate="eng_prog_2_axis_7">Marble and granite works</li>
                 <li data-translate="eng_prog_2_axis_8">Presentation + Evaluation</li>
               </ul>
-              <a href="eng-civil-archi-phase-two.html" class="btn btn-primary mt-3">
-                <i class="fa fa-info-circle me-2"></i><span data-translate="view_full_program">View Full Program Details</span>
+              <a href="contact.html" class="btn btn-primary mt-3">
+                <i class="fa fa-user-plus me-2"></i><span data-translate="enroll_button">Enroll in This Program</span>
               </a>
             </div>
 
@@ -189,8 +189,8 @@
                 <li data-translate="eng_prog_3_axis_8">Occupational Safety and Health Management Systems</li>
                 <li data-translate="eng_prog_3_axis_9">Presentation + Evaluation</li>
               </ul>
-              <a href="eng-civil-archi-phase-three.html" class="btn btn-primary mt-3">
-                <i class="fa fa-info-circle me-2"></i><span data-translate="view_full_program">View Full Program Details</span>
+              <a href="contact.html" class="btn btn-primary mt-3">
+                <i class="fa fa-user-plus me-2"></i><span data-translate="enroll_button">Enroll in This Program</span>
               </a>
             </div>
 
@@ -209,8 +209,8 @@
                 <li data-translate="eng_prog_4_axis_6">Team work effectiveness</li>
                 <li data-translate="eng_prog_4_axis_7">Presentation + Evaluation</li>
               </ul>
-              <a href="eng-mech-elec-combined.html" class="btn btn-primary mt-3">
-                <i class="fa fa-info-circle me-2"></i><span data-translate="view_full_program">View Full Program Details</span>
+              <a href="contact.html" class="btn btn-primary mt-3">
+                <i class="fa fa-user-plus me-2"></i><span data-translate="enroll_button">Enroll in This Program</span>
               </a>
             </div>
 
@@ -229,8 +229,8 @@
                 <li data-translate="eng_prog_5_axis_6">Welding technology</li>
                 <li data-translate="eng_prog_5_axis_7">Presentation + Evaluation</li>
               </ul>
-              <a href="eng-mech-elec-combined.html" class="btn btn-primary mt-3">
-                <i class="fa fa-info-circle me-2"></i><span data-translate="view_full_program">View Full Program Details</span>
+              <a href="contact.html" class="btn btn-primary mt-3">
+                <i class="fa fa-user-plus me-2"></i><span data-translate="enroll_button">Enroll in This Program</span>
               </a>
             </div>
 
@@ -249,8 +249,8 @@
                 <li data-translate="eng_prog_6_axis_6">Occupational Safety and Health Management Systems</li>
                 <li data-translate="eng_prog_6_axis_7">Presentation + Evaluation</li>
               </ul>
-              <a href="eng-mech-elec-combined.html" class="btn btn-primary mt-3">
-                <i class="fa fa-info-circle me-2"></i><span data-translate="view_full_program">View Full Program Details</span>
+              <a href="contact.html" class="btn btn-primary mt-3">
+                <i class="fa fa-user-plus me-2"></i><span data-translate="enroll_button">Enroll in This Program</span>
               </a>
             </div>
 
@@ -270,8 +270,8 @@
                 <li data-translate="eng_prog_7_axis_7">How to read road drawings and longitudinal sections</li>
                 <li data-translate="eng_prog_7_axis_8">Road finishing works</li>
               </ul>
-              <a href="eng-feasibility-surveying.html" class="btn btn-primary mt-3">
-                <i class="fa fa-info-circle me-2"></i><span data-translate="view_full_program">View Full Program Details</span>
+              <a href="contact.html" class="btn btn-primary mt-3">
+                <i class="fa fa-user-plus me-2"></i><span data-translate="enroll_button">Enroll in This Program</span>
               </a>
             </div>
 
@@ -288,8 +288,8 @@
                 <li data-translate="eng_prog_8_axis_4">Execution of concrete foundations (footings and columns) in rivers and seas</li>
                 <li data-translate="eng_prog_8_axis_5">Surveying applications on some bridge works (superstructure - finishes)</li>
               </ul>
-              <a href="eng-feasibility-surveying.html" class="btn btn-primary mt-3">
-                <i class="fa fa-info-circle me-2"></i><span data-translate="view_full_program">View Full Program Details</span>
+              <a href="contact.html" class="btn btn-primary mt-3">
+                <i class="fa fa-user-plus me-2"></i><span data-translate="enroll_button">Enroll in This Program</span>
               </a>
             </div>
 
@@ -317,8 +317,8 @@
                 <li data-translate="eng_prog_9_axis_9">Contracting procedures for supplies and purchases (Documentary cycle)</li>
                 <li data-translate="eng_prog_9_axis_10">Engineering insurance</li>
               </ul>
-              <a href="eng-tech-office.html" class="btn btn-primary mt-3">
-                <i class="fa fa-info-circle me-2"></i><span data-translate="view_full_program">View Full Program Details</span>
+              <a href="contact.html" class="btn btn-primary mt-3">
+                <i class="fa fa-user-plus me-2"></i><span data-translate="enroll_button">Enroll in This Program</span>
               </a>
             </div>
 
@@ -343,8 +343,8 @@
                 <li data-translate="eng_prog_10_axis_7">Planning using Network Analysis and Critical Path Method</li>
                 <li data-translate="eng_prog_10_axis_8">Occupational Safety and Health Management Systems OSHAS 18001/2007</li>
               </ul>
-              <a href="eng-tech-office.html" class="btn btn-primary mt-3">
-                <i class="fa fa-info-circle me-2"></i>View Full Program Details
+              <a href="contact.html" class="btn btn-primary mt-3">
+                <i class="fa fa-user-plus me-2"></i><span data-translate="enroll_button">Enroll in This Program</span>
               </a>
             </div>
 
@@ -369,8 +369,8 @@
                 <li data-translate="eng_prog_11_axis_8">Economic, social, and environmental evaluation</li>
                 <li data-translate="eng_prog_11_axis_9">Practical application model for the feasibility study of a tourist village</li>
               </ul>
-              <a href="eng-real-estate-valuation.html" class="btn btn-primary mt-3">
-                <i class="fa fa-info-circle me-2"></i><span data-translate="view_full_program">View Full Program Details</span>
+              <a href="contact.html" class="btn btn-primary mt-3">
+                <i class="fa fa-user-plus me-2"></i><span data-translate="enroll_button">Enroll in This Program</span>
               </a>
             </div>
 
@@ -396,8 +396,8 @@
                 <li data-translate="eng_prog_12_axis_8">Performing a practical real estate appraisal for a commercial building</li>
                 <li data-translate="eng_prog_12_axis_9">Performing a practical real estate appraisal for a hotel or hotel apartments</li>
               </ul>
-              <a href="eng-real-estate-valuation.html" class="btn btn-primary mt-3">
-                <i class="fa fa-info-circle me-2"></i><span data-translate="view_full_program">View Full Program Details</span>
+              <a href="contact.html" class="btn btn-primary mt-3">
+                <i class="fa fa-user-plus me-2"></i><span data-translate="enroll_button">Enroll in This Program</span>
               </a>
             </div>
 
@@ -491,58 +491,85 @@
   </div>
   <!-- Program Details End -->
 
-  <!-- Footer Start -->
-  <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
-      <div class="container py-5">
-          <div class="row g-5">
-              <div class="col-lg-3 col-md-6">
-                  <h4 class="text-white mb-3"><span data-translate="footer_quick_links">Quick Link</span></h4>
-                  <a class="btn btn-link" href="about.html"><span data-translate="footer_about">About Us</span></a>
-                  <a class="btn btn-link" href="contact.html"><span data-translate="footer_contact">Contact Us</span></a>
-                  <a class="btn btn-link" href="privacy.html">Privacy Policy</a>
-                  <a class="btn btn-link" href="terms.html">Terms & Condition</a>
-                  <a class="btn btn-link" href="faqs.html">FAQs & Help</a>
-              </div>
-              <div class="col-lg-3 col-md-6">
-                  <h4 class="text-white mb-3"><span data-translate="footer_contact_title">Contact</span></h4>
-                  <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Egypt</p>
-                  <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012</p>
-                  <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
-                  <div class="d-flex pt-2">
-                      <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/profile.php?id=61579270026809" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
-                      <a class="btn btn-outline-light btn-social" href="https://wa.me/YOUR_PHONE_NUMBER" target="_blank" rel="noopener noreferrer"><i class="fab fa-whatsapp"></i></a>
-                      <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
-                  </div>
-              </div>
-              <div class="col-lg-3 col-md-6">
-                  <h4 class="text-white mb-3"><span data-translate="footer_newsletter">Newsletter</span></h4>
-                  <p><span data-translate="footer_newsletter_text">Sign-up for our newsletter</span></p>
-                  <div class="position-relative mx-auto" style="max-width: 400px;">
-                      <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="<span data-translate="footer_email_placeholder">Your email</span>">
-                      <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
-                  </div>
-              </div>
-          </div>
-      </div>
-      <div class="container">
-          <div class="copyright">
-              <div class="row">
-                  <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                      &copy; <a class="border-bottom" href="#">Global Academy</a>, <span data-translate="footer_rights">All Right Reserved</span>.
-                  </div>
-                  <div class="col-md-6 text-center text-md-end">
-                      <div class="footer-menu">
-                          <a href="index.html">Home</a>
-                          <a href="">Cookies</a>
-                          <a href="">Help</a>
-                          <a href="">FQAs</a>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
-  <!-- Footer End -->
+      <!-- Footer Start -->
+  
+    <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
+        <div class="container py-5">
+            <div class="row g-5">
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-white mb-3" data-translate="footer_quick_link">Quick Link</h4>
+                    <a class="btn btn-link" href="about.html" data-translate="footer_about">About Us</a>
+                    <a class="btn btn-link" href="contact.html" data-translate="footer_contact_us">Contact Us</a>
+                    <a class="btn btn-link" href="contact.html" data-translate="footer_privacy">Privacy Policy</a>
+                    <a class="btn btn-link" href="contact.html" data-translate="footer_terms">Terms & Condition</a>
+                    <a class="btn btn-link" href="contact.html" data-translate="footer_faqs">FAQs & Help</a>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-white mb-3" data-translate="footer_contact_title">Contact</h4>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Egypt</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <div class="d-flex pt-2">
+            
+                        <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/profile.php?id=61579270026809" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-light btn-social" href="https://wa.me/YOUR_PHONE_NUMBER" target="_blank" rel="noopener noreferrer"><i class="fab fa-whatsapp"></i></a>
+                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+                <!-- Gallery
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-white mb-3">Gallery</h4>
+                    <div class="row g-2 pt-2">
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="img/course-1.jpg" alt="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="img/course-2.jpg" alt="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="img/course-3.jpg" alt="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="img/course-2.jpg" alt="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="img/course-3.jpg" alt="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="img/course-1.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+                -->
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-white mb-3" data-translate="footer_newsletter">Newsletter</h4>
+                    <p data-translate="footer_newsletter_text">Stay updated with our latest programs</p>
+                    <div class="position-relative mx-auto" style="max-width: 400px;">
+                        <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email" data-translate-placeholder="footer_email_placeholder">
+                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2" data-translate="footer_signup">SignUp</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="copyright">
+                <div class="row">
+                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                        &copy; <a class="border-bottom" href="#">Global Academy</a>, <span data-translate="footer_rights">All Right Reserved</span>.
+                    </div>
+                    <div class="col-md-6 text-center text-md-end">
+                        <div class="footer-menu">
+                            <a href="" data-translate="footer_home">Home</a>
+                            <a href="" data-translate="footer_cookies">Cookies</a>
+                            <a href="" data-translate="footer_help">Help</a>
+                            <a href="">FQAs</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Footer End -->
 
   <!-- Back to Top -->
   <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
