--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -281,7 +281,7 @@
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
-    <!-- Footer Start -->
+        <!-- Footer Start -->
   
     <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
@@ -290,9 +290,9 @@
                     <h4 class="text-white mb-3" data-translate="footer_quick_link">Quick Link</h4>
                     <a class="btn btn-link" href="about.html" data-translate="footer_about">About Us</a>
                     <a class="btn btn-link" href="contact.html" data-translate="footer_contact_us">Contact Us</a>
-                    <a class="btn btn-link" href="privacy.html" data-translate="footer_privacy">Privacy Policy</a>
-                    <a class="btn btn-link" href="terms.html" data-translate="footer_terms">Terms & Condition</a>
-                    <a class="btn btn-link" href="faqs.html" data-translate="footer_faqs">FAQs & Help</a>
+                    <a class="btn btn-link" href="contact.html" data-translate="footer_privacy">Privacy Policy</a>
+                    <a class="btn btn-link" href="contact.html" data-translate="footer_terms">Terms & Condition</a>
+                    <a class="btn btn-link" href="contact.html" data-translate="footer_faqs">FAQs & Help</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3" data-translate="footer_contact_title">Contact</h4>
