--- a/programs.html
+++ b/programs.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -220,25 +220,26 @@
 </div>
 <!-- end section -->
 
-    <!-- Footer Start -->
+        <!-- Footer Start -->
+  
     <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3"><span data-translate="footer_quick_links">Quick Link</span></h4>
-                    <a class="btn btn-link" href="about.html"><span data-translate="footer_about">About Us</span></a>
-                    <a class="btn btn-link" href="contact.html"><span data-translate="footer_contact">Contact Us</span></a>
-                    <a class="btn btn-link" href="privacy.html">Privacy Policy</a>
-                    <a class="btn btn-link" href="terms.html">Terms & Condition</a>
-                    <a class="btn btn-link" href="faqs.html">FAQs & Help</a>
+                    <h4 class="text-white mb-3" data-translate="footer_quick_link">Quick Link</h4>
+                    <a class="btn btn-link" href="about.html" data-translate="footer_about">About Us</a>
+                    <a class="btn btn-link" href="contact.html" data-translate="footer_contact_us">Contact Us</a>
+                    <a class="btn btn-link" href="contact.html" data-translate="footer_privacy">Privacy Policy</a>
+                    <a class="btn btn-link" href="contact.html" data-translate="footer_terms">Terms & Condition</a>
+                    <a class="btn btn-link" href="contact.html" data-translate="footer_faqs">FAQs & Help</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3"><span data-translate="footer_contact_title">Contact</span></h4>
+                    <h4 class="text-white mb-3" data-translate="footer_contact_title">Contact</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Egypt</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
                     <div class="d-flex pt-2">
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
+            
                         <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/profile.php?id=61579270026809" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-outline-light btn-social" href="https://wa.me/YOUR_PHONE_NUMBER" target="_blank" rel="noopener noreferrer"><i class="fab fa-whatsapp"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
@@ -270,12 +271,11 @@
                 </div>
                 -->
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3"><span data-translate="footer_newsletter">Newsletter</span></h4>
-                    <p><span data-translate="footer_newsletter_text">Sign-up for our newsletter</span></p>
+                    <h4 class="text-white mb-3" data-translate="footer_newsletter">Newsletter</h4>
+                    <p data-translate="footer_newsletter_text">Stay updated with our latest programs</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
-                        <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="<span data-translate="footer_email_placeholder">Your email</span>">
-                        <button type="button"
-                            class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
+                        <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email" data-translate-placeholder="footer_email_placeholder">
+                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2" data-translate="footer_signup">SignUp</button>
                     </div>
                 </div>
             </div>
@@ -288,9 +288,9 @@
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
-                            <a href="">Home</a>
-                            <a href="">Cookies</a>
-                            <a href="">Help</a>
+                            <a href="" data-translate="footer_home">Home</a>
+                            <a href="" data-translate="footer_cookies">Cookies</a>
+                            <a href="" data-translate="footer_help">Help</a>
                             <a href="">FQAs</a>
                         </div>
                     </div>
